fixed causes image list item title height to align items for 640px screen size

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1232,6 +1232,66 @@ img {
   height: fit-content;
 }
 
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[85px\] {
+  height: 85px;
+}
+
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[20\%\] {
+  height: 20%;
+}
+
+.h-\[40\%\] {
+  height: 40%;
+}
+
+.h-\[30\%\] {
+  height: 30%;
+}
+
+.h-\[35\%\] {
+  height: 35%;
+}
+
+.h-\[25\%\] {
+  height: 25%;
+}
+
+.h-\[28\%\] {
+  height: 28%;
+}
+
+.h-\[32\%\] {
+  height: 32%;
+}
+
+.h-\[5\.313rem\] {
+  height: 5.313rem;
+}
+
 .w-screen {
   width: 100vw;
 }
@@ -1840,6 +1900,21 @@ img {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -3567,6 +3642,10 @@ img {
 
   .sm\:h-12 {
     height: 3rem;
+  }
+
+  .sm\:h-auto {
+    height: auto;
   }
 
   @media (min-width: 640px) {
